--- a/Assignment/01_Medium/backend/package.json
+++ b/Assignment/01_Medium/backend/package.json
@@ -5,13 +5,16 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon /server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js",
+    "build": "npm run build"
   },
   "author": "Pranav Gupta",
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.6.1",
