--- a/Assignment/01_Medium/frontend/package.json
+++ b/Assignment/01_Medium/frontend/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start": "npx serve -s dist" 
   },
   "dependencies": {
     "@chakra-ui/react": "^2.8.2",
